--- a/experimental/polyglot/baselines/notebooks/Models Eval.ipynb
+++ b/experimental/polyglot/baselines/notebooks/Models Eval.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,36 +30,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "def LoadProtos(directory, proto_class):\n",
-    "    return {\n",
-    "        name.stem: corpuses.Corpus(pbutil.FromFile(directory / name, proto_class()))\n",
-    "        for name in directory.iterdir()\n",
-    "        if not str(name.stem).startswith('c-')  # TODO\n",
-    "    }\n",
-    "\n",
-    "clone_lists_dir = bazelutil.DataPath('phd/experimental/polyglot/baselines/corpuses')\n",
-    "corpuses_dir = bazelutil.DataPath('phd/experimental/polyglot/baselines/corpuses')\n",
-    "models_dir = bazelutil.DataPath('phd/experimental/polyglot/baselines/models')\n",
-    "samplers_dir = bazelutil.DataPath('phd/experimental/polyglot/baselines/samplers')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loaded 6 instances\n"
-     ]
-    }
-   ],
    "source": [
     "working_dir = '/var/phd/clgen/baseline'\n",
     "\n",
@@ -77,8 +50,23 @@
     "    InstanceConfigs('opencl', '64-1024x2-adam', '1.0'),\n",
     "    InstanceConfigs('opencl', '128-512x2-adam', '1.0'),\n",
     "    InstanceConfigs('opencl', '128-1024x2-adam', '1.0'),\n",
-    "]\n",
-    "\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loaded 6 instances\n"
+     ]
+    }
+   ],
+   "source": [
     "def InstanceFromConfigs(config_paths):\n",
     "    corpus_config = pbutil.FromFile(config_paths['corpus'], corpus_pb2.Corpus())\n",
     "    model_config = pbutil.FromFile(config_paths['model'], model_pb2.Model())\n",
@@ -93,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -197,9 +185,9 @@
        "      <td>Adam</td>\n",
        "      <td>0.001</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>47</td>\n",
-       "      <td>0.122</td>\n",
-       "      <td>15 hours</td>\n",
+       "      <td>48</td>\n",
+       "      <td>0.121</td>\n",
+       "      <td>16 hours</td>\n",
        "      <td>20 minutes</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -253,12 +241,12 @@
        "0      Adam          0.001    0.0      -          -             -            -  \n",
        "1      Adam          0.001    0.0      -          -             -            -  \n",
        "2      Adam          0.001    0.0     50      0.162      13 hours   16 minutes  \n",
-       "3      Adam          0.001    0.0     47      0.122      15 hours   20 minutes  \n",
+       "3      Adam          0.001    0.0     48      0.121      16 hours   20 minutes  \n",
        "4      Adam          0.001    0.0      -          -             -            -  \n",
        "5      Adam          0.001    0.0      -          -             -            -  "
       ]
      },
-     "execution_count": 66,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -296,13 +284,13 @@
     "    # * Time / 1k good samples\n",
     "    return stats\n",
     "\n",
-    "df = pd.DataFrame([InstanceStats(i) for i in instances])\n",
-    "df"
+    "stats = pd.DataFrame([InstanceStats(i) for i in instances])\n",
+    "stats"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -317,7 +305,7 @@
     }
    ],
    "source": [
-    "for (_, row), instance in zip(df.iterrows(), instances):\n",
+    "for (_, row), instance in zip(stats.iterrows(), instances):\n",
     "    losses = [t.loss for t in instance.model.TrainingTelemetry()]\n",
     "    plt.plot(range(len(losses)), losses, label=f\"{row['Language']}-{row['Embedding']}-{row['Model size']}\")\n",
     "\n",
