Camera ready changes.

--- a/docs/2018_07_issta/paper.tex
+++ b/docs/2018_07_issta/paper.tex
@@ -1,8 +1,8 @@
 \input{preamble}
 
 \begin{document}
-
   \title{Compiler Fuzzing through Deep Learning}
+  \input{authors}
   \input{abstract}
   \maketitle
 
@@ -18,6 +18,4 @@
 
   \bibliographystyle{plain}
   \bibliography{refs}
-
 \end{document}
-
