--- a/docs/2018_07_issta/refs.bib
+++ b/docs/2018_07_issta/refs.bib
@@ -12222,10 +12222,10 @@
     keywords = {neural flashfill, neural program synthesis, neural programming}
 }
 
-@article{Godefroid2017,
+@inproceedings{Godefroid2017,
     title = {{Learn{\&}Fuzz: Machine Learning for Input Fuzzing}},
     year = {2017},
-    journal = {arXiv:1701.07232},
+    booktitle = {ASE},
     author = {Godefroid, P. and Peleg, H. and Singh, R.}
 }
 
@@ -12484,9 +12484,251 @@
 @article{Bottinger2018,
     title = {{Deep Reinforcement Fuzzing}},
     year = {2018},
-    author = {B{\"{o}}ttinger, Konstantin and Godefroid, Patrice and Singh, Rishabh},
-    url = {http://arxiv.org/abs/1801.04589},
-    arxivId = {1801.04589}
+    journal = {arXiv:1801.04589},
+    author = {B{\"{o}}ttinger, K. and Godefroid, P. and Singh, R.}
+}
+
+@article{Slee2007,
+    title = {{Thrift: Scalable cross-language services implementation}},
+    year = {2007},
+    journal = {Facebook White Paper},
+    author = {Slee, M. and Agarwal, A. and Kwiatkowski, M.},
+    number = {8},
+    volume = {5}
+}
+
+@article{Silver2017a,
+    title = {{Mastering the game of Go without human knowledge}},
+    year = {2017},
+    journal = {Nature},
+    author = {Silver, D. and Schrittwieser, J. and Simonyan, K. and Antonoglou, I. and Huang, A. and Guez, A. and Hubert, T. and Baker, L. and Lai, M. and Bolton, A. and Chen, Y. and Lillicrap, T. and Hui, F. and Sifre, L. and Van Den Driessche, G. and Graepel, T. and Hassabis, D.},
+    number = {7676},
+    volume = {550},
+    publisher = {Nature Publishing Group},
+    isbn = {3013372370}
+}
+
+@article{Anderson2017,
+    title = {{Optimal DNN Primitive Selection with Partitioned Boolean Quadratic Programming}},
+    year = {2017},
+    journal = {arXiv:1710.01079},
+    author = {Anderson, A. and Gregg, D.}
+}
+
+@inproceedings{Toffola2018,
+    title = {{Synthesizing programs that expose performance bottlenecks}},
+    year = {2018},
+    booktitle = {CGO},
+    author = {Toffola, L. D. and Pradel, M. and Gross, T. R.},
+    url = {https://dl.acm.org/citation.cfm?id=3168830},
+    keywords = {dynamic analysis, fuzzing, performance bottlenecks, profiling, program synthesis}
+}
+
+@inproceedings{Buchwald2018,
+    title = {{Synthesizing an Instruction Selection Rule Library from Semantic Specifications}},
+    year = {2018},
+    booktitle = {CGO},
+    author = {Buchwald, S. and Fried, A. and Hack, S.}
+}
+
+@incollection{Flannery1986,
+    title = {{Are Two Distributions Different?}},
+    year = {1986},
+    booktitle = {Numerical Recipes in C: The Art of Scientific Computing},
+    author = {Flannery, B. P. and Teukolsky, S. and Press, W. H. and Vetterling, W. T.}
+}
+
+@inproceedings{Bastani2017,
+    title = {{Synthesizing Program Input Grammars}},
+    year = {2017},
+    booktitle = {PLDI},
+    author = {Bastani, O. and Sharma, R. and Aiken, A. and Liang, P.},
+    url = {http://arxiv.org/abs/1608.01723},
+    isbn = {9781450349888},
+    doi = {10.1145/3062341.3062349},
+    issn = {0362-1340},
+    arxivId = {1608.01723},
+    keywords = {fuzzing, grammar synthesis}
+}
+
+@inproceedings{Terence2016,
+    title = {{Towards a Universal Code Formatter through Machine Learning}},
+    year = {2016},
+    booktitle = {SLE},
+    author = {Terence, P. and Vinju, J.},
+    isbn = {9781450344470},
+    keywords = {a particular code formatting, a subjective notion, because the value of, configurable, discussions, for exam-, for-, formatting algorithms, matters must be highly, often leading to heated, pretty-printer, style is, this allows}
+}
+
+@article{Kraska2017,
+    title = {{The Case for Learned Index Structures}},
+    year = {2017},
+    journal = {arXiv:1712.01208},
+    author = {Kraska, T. and Beutel, A. and Chi, E. H. and Dean, J. and Polyzotis, N.},
+    arxivId = {arXiv:1712.01208v2}
+}
+
+@article{Dam2018,
+    title = {{A deep tree-based model for software defect prediction}},
+    year = {2018},
+    journal = {arXiv:1802.00921},
+    author = {Dam, H. K. and Grundy, J. and Kim, T. and Kim, C.},
+    arxivId = {arXiv:1802.00921v1}
+}
+
+@inproceedings{Ojika2018,
+    title = {{Using FPGAs as Microservices: Technology, Challenges and Case Study}},
+    year = {2018},
+    booktitle = {BPOE},
+    author = {Ojika, D. and Gordon-ross, A. and Lam, H. and Patel, B. and Kaul, G. and Strayer, J.},
+    keywords = {and composability across an, cloud computing, compression, container, deployment, fpga, fpga-as-a-service, maintainability, significant resource management challenge, virtualization, which includes}
+}
+
+@incollection{Ng,
+    title = {{Machine Learning Yearning (Chapters 1-14)}},
+    year = {2018},
+    booktitle = {Machine Learning Yearning},
+    author = {Ng, A.}
+}
+
+@article{Sarkar,
+    title = {{Software Modernization via Code Mining}},
+    journal = {Google Fellowship Proposal},
+    author = {Sarkar, V. and Fleming, S. and Bacon, D. and Field, J. and Rogers, I. and Smith, R.}
+}
+
+@inproceedings{Mirhoseini2018,
+    title = {{A Hierarchical Model for Device Placement}},
+    year = {2018},
+    booktitle = {ICLR},
+    author = {Mirhoseini, A. and Goldie, A. and Pham, H. and Steiner, B. and Le, Q. V. and Dean, J.}
+}
+
+@inproceedings{Biswas,
+    title = {{Designing a Micro-Benchmark Suite to Evaluate gRPC for TensorFlow: Early Experiences}},
+    year = {2018},
+    booktitle = {BPOE},
+    author = {Biswas, R. and Lu, X. and Panda, D.},
+    keywords = {deep learn-, grpc, micro-benchmark, tensorflow}
+}
+
+@incollection{Ng2018,
+    title = {{Machine Learning Yearning (Chapters 20-22)}},
+    year = {2018},
+    booktitle = {Machine Learning Yearning},
+    author = {Ng, A.},
+    url = {https://gallery.mailchimp.com/dc3a7ef4d750c0abfc19202a3/files/37024aa7-8550-44d9-aa5e-e80aa82ec436/Ng_MLY03.pdf}
+}
+
+@article{Alon2018,
+    title = {{code2vec: Learning Distributed Representations of Code}},
+    year = {2018},
+    journal = {arXiv:1803.09473},
+    author = {Alon, U. and Zilberstein, M. and Levy, O. and Yahav, E.},
+    arxivId = {arXiv:1803.09473v2}
+}
+
+@article{Henkel,
+    title = {{Code Vectors: Understanding Programs Through Embedded Abstracted Symbolic Traces}},
+    journal = {arXiv:1803.06686},
+    author = {Henkel, J. and Liblit, B. and Lahiri, S. and Reps, T.}
+}
+
+@incollection{Yearning-draft,
+    title = {{Machine Learning Yearning (Chapters 23-27)}},
+    booktitle = {Machine Learning Yearning},
+    author = {Ng, A.}
+}
+
+@article{Wangc,
+    title = {{Machine Learning in Compiler Optimisation}},
+    journal = {arXiv:1805.03441},
+    author = {Wang, Zheng and Boyle, Michael O}
+}
+
+@article{Tatiana2015,
+    title = {{Machine learning in Compilers}},
+    year = {2018},
+    journal = {Proceedings of the IEEE},
+    author = {Wang, Z. and O'Boyle, M.},
+    isbn = {9781450333993}
+}
+
+@incollection{Yearning-drafta,
+    title = {{Machine Learning Yearning (Chapters 28-30)}},
+    year = {2018},
+    booktitle = {Machine Learning Yearning},
+    author = {Ng, A.}
+}
+
+@article{Petrov2018,
+    title = {{Algorithms Behind Modern Storage Systems}},
+    year = {2018},
+    journal = {acmqueue},
+    author = {Petrov, A.},
+    number = {april},
+    pages = {31--51}
+}
+
+@incollection{Nga,
+    title = {{Machine Learning Yearning (Chapters 31-33)}},
+    year = {2018},
+    booktitle = {Machine Learning Yearning},
+    author = {Ng, A.}
+}
+
+@incollection{Yearning-draftb,
+    title = {{Machine Learning Yearning (Chapters 33-35)}},
+    year = {2018},
+    booktitle = {Machine Learning Yearning},
+    author = {Ng, A.}
+}
+
+@inproceedings{Cummins2018a,
+    title = {{DeepSmith: Compiler Fuzzing through Deep Learning}},
+    year = {2018},
+    booktitle = {ACACES},
+    author = {Cummins, C. and Petoumenos, P. and Murray, A. and Leather, H.},
+    keywords = {compilers, deep learning, differential testing, opencl}
+}
+
+@inproceedings{Cummins2016c,
+    title = {{Autotuning OpenCL Workgroup Sizes}},
+    year = {2016},
+    booktitle = {ACACES},
+    author = {Cummins, C. and Petoumenos, P. and Steuwer, M. and Leather, H.},
+    keywords = {GPUs, authotuning, machine learning, opencl, stencil codes, synthetic benchmarking}
+}
+
+@inproceedings{Cummins2016a,
+    title = {{Autotuning OpenCL Workgroup Size for Stencil Patterns}},
+    year = {2015},
+    booktitle = {ADAPT},
+    author = {Cummins, C. and Petoumenos, P. and Steuwer, M. and Leather, H.},
+    url = {http://arxiv.org/abs/1511.02490},
+    arxivId = {1511.02490}
+}
+
+@inproceedings{Wang2017c,
+    title = {{Skyfire: Data-Driven Seed Generation for Fuzzing}},
+    year = {2017},
+    booktitle = {S{\&}P},
+    author = {Wang, J. and Chen, B. and Wei, L. and Liu, Y.},
+    isbn = {9781509055326},
+    doi = {10.1109/SP.2017.23},
+    issn = {10816011}
+}
+
+@incollection{Yearning-draftc,
+    title = {{Machine Learning Yearning (Chapters 36-39)}},
+    year = {2018},
+    booktitle = {Machine Learning Yearning},
+    author = {Ng, A.}
+}
+
+@misc{Zalewski,
+    title = {{American Fuzzy Lop}},
+    author = {Zalewski, M.}
 }
 
 @article{2017FindingTesting,
