--- a/docs/2018_07_issta/preamble.tex
+++ b/docs/2018_07_issta/preamble.tex
@@ -1,31 +1,32 @@
-%
-% LaTeX template for prepartion of submissions to PLDI'16
-%
-% Requires temporary version of sigplanconf style file provided on
-% PLDI'16 web site.
-%
-%\documentclass[pageno,nonatbib]{jpaper}
-% \documentclass[pageno]{jpaper}
-% \documentclass[pldi-cameraready]{sigplanconf-pldi16}
-\documentclass[sigconf,review,anonymous]{acmart}
-\acmConference[ISSTA 2018]{ACM SIGSOFT International Symposium on Software Testing and Analysis}{16–22 July, 2018}{Amsterdam, The Netherlands}
+\documentclass[sigconf,preprint]{acmart}
+
+% Copyright bumpf.
+\copyrightyear{2018}
+\acmYear{2018}
+\setcopyright{acmlicensed}
+\acmConference[ISSTA'18]{27th ACM SIGSOFT International Symposium  on  Software Testing and Analysis}{July 16--21, 2018}{Amsterdam, Netherlands}
+\acmBooktitle{ISSTA'18: International Symposium on Software Testing and Analysis, July 16--21, 2018, Amsterdam, Netherlands}
+\acmPrice{15.00}
+\acmDOI{10.1145/3213846.3213848}
+\acmISBN{978-1-4503-5699-2/18/07}
+
+\begin{CCSXML}
+	<ccs2012>
+	<concept>
+	<concept_id>10011007.10011074.10011099.10011102.10011103</concept_id>
+	<concept_desc>Software and its engineering~Software testing and debugging</concept_desc>
+	<concept_significance>500</concept_significance>
+	</concept>
+	</ccs2012>
+\end{CCSXML}
+
+\ccsdesc[500]{Software and its engineering~Software testing and debugging}
+
+\keywords{Deep Learning; Differential Testing; Compiler Fuzzing.}
 
 \usepackage[utf8]{inputenc}
 
 \usepackage[normalem]{ulem}
-
-%
-% the following standard packages may be helpful, but are not required
-%
-% \usepackage{siunitx}            % typset units correctly
-% \usepackage{courier}            % standard fixed width font
-% \usepackage[scaled]{helvet} % see www.ctan.org/get/macros/latex/required/psnfss/psnfss2e.pdf
-% \usepackage{url}                  % format URLs
-% \usepackage{listings}          % format code
-% \usepackage{enumitem}      % adjust spacing in enums
-% \usepackage[colorlinks=true,allcolors=blue,breaklinks,draft=false]{hyperref}   % hyperlinks, including DOIs and URLs in bibliography
-% known bug: http://tex.stackexchange.com/questions/1522/pdfendlink-ended-up-in-different-nesting-level-than-pdfstartlink
-% \newcommand{\doi}[1]{doi:~\href{http://dx.doi.org/#1}{\Hurl{#1}}}   % print a hyperlinked DOI
 
 % Start of 'ignore natbib' hack
 \let\bibhang\relax
@@ -35,56 +36,16 @@
 \expandafter\let\csname ver@natbib.sty\endcsname\relax
 % End of 'ignore natbib' hack
 
-% sort and compress citations
-%\usepackage[%
-%backend=biber,
-%style=numeric-comp,
-%sorting=none,        % nty,nyt,nyvt,anyt,anyvt,ynt,ydnt,none
-%sortcites=true,      % sort \cite{b a d c}: true,false
-%block=none,          % space between blocks: none,space,par,nbpar,ragged
-%indexing=false,      % indexing options: true,false,cite,bib
-%citereset=none,      % don't reset cites
-%isbn=false,          % print ISBN?
-%url=true,            % print URL?
-%doi=false,           % print DOI?
-%natbib=true,         % natbib compatability
-%maxbibnames=99       % no 'et-al' condensing author names in biliography
-%]{biblatex}
-
-%\addbibresource{./refs.bib}
-
 \usepackage{graphicx}
 
-% for subfloat:
+% Enable \subfloat{} command.
 \usepackage{subfig}
-
-%\usepackage{csquotes}
-%
-% no border around links
-\usepackage{xcolor}
-\hypersetup{
-   colorlinks,
-   linkcolor={black},
-   citecolor={black},
-   urlcolor={black}
-}
-
-% Author comments:
-\usepackage{color}
-\newcommand{\cc}[1]{{\color{orange}{\emph{(CC)} #1}}}
-\newcommand{\hl}[1]{{\color{blue}{\emph{(HL)} #1}}}
-\newcommand{\pp}[1]{{\color{cyan}{\emph{(PP)} #1}}}
-\newcommand{\am}[1]{{\color{purple}{\emph{(AM)} #1}}}
-
-% \newcommand{\factcheck}[1]{{\color{red}{#1}}}
-\newcommand{\factcheck}[1]{#1}
 
 % Tables.
 \usepackage{booktabs}
 \usepackage{tabularx}
 \usepackage{hhline}
 \usepackage{xspace}
-% \usepackage[table]{xcolor}
 
 % Define column types L, C, R with known text justification and fixed widths:
 \usepackage{array}
@@ -92,13 +53,11 @@
 \newcolumntype{C}[1]{>{\centering\let\newline\\\arraybackslash\hspace{0pt}}m{#1}}
 \newcolumntype{R}[1]{>{\raggedleft\let\newline\\\arraybackslash\hspace{0pt}}m{#1}}
 
-%% needed for \upgammar
-%\usepackage{upgreek}
-%
 % Source code listings.
+\usepackage{courier}
 \usepackage{listings,lstautogobble}
 \lstset{%
-  basicstyle=\footnotesize,%
+  basicstyle=\scriptsize\ttfamily,%
   numbers=left,%
   xleftmargin=1em,
   framexleftmargin=2.5em,
@@ -112,9 +71,7 @@
 }
 
 % OpenCL listings
-%
-% From:
-% http://gpumodeling.blogspot.com/2011/06/opencl-programs-in-latex-listings.html
+% From: http://gpumodeling.blogspot.com/2011/06/opencl-programs-in-latex-listings.html
 \lstdefinelanguage[OpenCL]{C}[ANSI]{C}
 {morekeywords={__kernel,kernel,__local,local,__global,global,%
     __constant,constant,__private,private,%
@@ -134,37 +91,24 @@
     quad,quad2,quad3,quad4,quad8,quad16,%
     complex,imaginary,barrier},%
 }%
-%
-%% Pseudo-code listings.
-%\usepackage{algorithm}
-%\usepackage{algorithmicx}
-%\usepackage{algpseudocode}
-%\usepackage[american]{babel}
-%
-%\newcommand\DeepTune{DeepTune\xspace}
-%
-%% math
-% \usepackage{amssymb}
-%\usepackage{bm}
-%\usepackage{amsmath}
-%\DeclareMathOperator*{\argmin}{arg\,min}
-%\DeclareMathOperator*{\argmax}{arg\,max}
 
-% \ceil operator
+% A \ceil{} operator.
 \usepackage{mathtools}
 \DeclarePairedDelimiter{\ceil}{\lceil}{\rceil}
 
-\usepackage{tikz}
-\def\checkmark{\tikz\fill[scale=0.2](0,.35) -- (.25,0) -- (1,.7) -- (.25,.15) -- cycle;}
-
+% A \cmark and \xmark symbol for testcase outcomes.
 \usepackage{amssymb}
 \usepackage{pifont}
 \usepackage{multirow}
 \newcommand{\cmark}{\ding{51}}
 \newcommand{\xmark}{\ding{55}}
 
+% Test case outcome classifications.
 \newcommand\bc{\textbf{bc}\xspace}
 \newcommand\bto{\textbf{bto}\xspace}
 \newcommand\abf{\textbf{abf}\xspace}
 \newcommand\arc{\textbf{arc}\xspace}
 \newcommand\awo{\textbf{awo}\xspace}
+
+% Balanced columns on the last page.
+\usepackage{flushend}
