Include PDFs verbatim.

--- a/abstract.tex
+++ b/abstract.tex
@@ -1,1 +1,1 @@
-6 word thesis: ``Deep Learning solves hard compiler problems.''
+6 word hypothesis: ``Deep Learning solves hard compiler problems.''
