--- a/preamble.tex
+++ b/preamble.tex
@@ -180,4 +180,8 @@ natbib=true,         % natbib compatability
 \usepackage{pgfplots, pgfplotstable}
 \usepgfplotslibrary{statistics}
 
+% Enable \includepdf{} command.
 \usepackage{pdfpages}
+
+% Use \lispum for placeholder text.
+\usepackage{lipsum}
