--- a/preliminary.tex
+++ b/preliminary.tex
@@ -1,19 +1,18 @@
 \begin{preliminary}
-	
-	\maketitle
-	
-	\begin{acknowledgements}%
-		\input{acks}%
-	\end{acknowledgements}%
-	
-	% \standarddeclaration
-	
-	% \dedication{}
-	
-	%% Contents, figures, tables, etc:
-	\tableofcontents
-	\listoffigures
-	\listoftables
-	% \listofalgorithms
-	% \lstlistoflistings
+  \maketitle
+
+  \begin{acknowledgements}%
+    \input{acks}%
+  \end{acknowledgements}%
+
+  \standarddeclaration
+
+  \dedication{Lorem Ipsum}
+
+  % Contents, figures, tables, etc:
+  \tableofcontents
+  \listoffigures
+  \listoftables
+  \listofalgorithms
+  \lstlistoflistings
 \end{preliminary}
