--- a/thesis.tex
+++ b/thesis.tex
@@ -6,17 +6,13 @@
 \abstract{\input{abstract}}
 
 \begin{document}
-
-\input{preliminary}
-
-\input{chap/intro}
-\input{chap/background}
-\input{chap/litreview}
-\input{cgo-2017/paper}
-\input{pact-2017/paper}
-\input{issta-2018/paper}
-
-\input{chap/conclusions}
-\input{bibliography}
-
+  \input{preliminary}
+  \input{chap/intro}
+  \input{chap/background}
+  \input{chap/litreview}
+  \input{chap/synthesizing_benchmarks}
+  \input{chap/end2end_dl}
+  \input{chap/compiler_fuzzing}
+  \input{chap/conclusions}
+  \input{bibliography}
 \end{document}
