Work and re-structure notebooks.

--- a/experimental/deeplearning/polyglot/Models Eval.ipynb
+++ b/experimental/deeplearning/polyglot/Models Eval.ipynb
@@ -18,7 +18,7 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
-    "from experimental.deeplearning.polyglot import get_instances\n",
+    "from datasets.github.scrape_repos import contentfiles\n",
     "from deeplearning.clgen import clgen\n",
     "from deeplearning.clgen import errors\n",
     "from deeplearning.clgen.corpuses import corpuses\n",
@@ -26,6 +26,7 @@
     "from deeplearning.clgen.proto import clgen_pb2\n",
     "from deeplearning.clgen.proto import model_pb2\n",
     "from deeplearning.clgen.proto import sampler_pb2\n",
+    "from experimental.deeplearning.polyglot import get_instances\n",
     "from lib.labm8 import bazelutil\n",
     "from lib.labm8 import pbutil\n",
     "from lib.labm8 import viz\n",
@@ -53,14 +54,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[PosixPath('/mnt/cc/data/datasets/github/corpuses/java'),\n",
+       " PosixPath('/mnt/cc/data/datasets/github/corpuses/opencl')]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def GetContentfileDirectories(instances: typing.List[clgen.Instance]) -> typing.List[pathlib.Path]:\n",
+    "    \"\"\"Return the lsit of contentfiles directories.\"\"\"\n",
+    "    contentfiles = [pathlib.Path(i.model.corpus.config.local_directory) for i in instances]\n",
+    "    return list(set(contentfiles))\n",
+    "\n",
+    "GetContentfileDirectories(instances)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def GetContentfileDatabase(local_directory: pathlib.Path) -> pathlib.Path:\n",
+    "    path = pathlib.Path(f'/mnt/cc/data/datasets/github/repos_by_lang/{local_directory.stem}.db')\n",
+    "    if path.is_file():\n",
+    "        return path\n",
+    "    else:\n",
+    "        raise FileNotFoundError(path)\n",
+    "        \n",
+    "contentfiles_dbs = [GetContentfileDatabase(p) for p in GetContentfileDirectories(instances)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loaded 0 output corpuses\n"
+      "Loaded 6 output corpuses\n"
      ]
     }
    ],
@@ -85,15 +128,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "  1% (138 of 11927) |                    | Elapsed Time: 0:01:23 ETA:   2:07:49"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def InstanceStats(instance: clgen.Instance, output_corpus: corpuses.Corpus) -> typing.Dict[str, typing.Any]:\n",
     "    stats = collections.OrderedDict()\n",
