--- a/experimental/deeplearning/polyglot/Models Eval.ipynb
+++ b/experimental/deeplearning/polyglot/Models Eval.ipynb
@@ -26,12 +26,9 @@
     "from deeplearning.clgen.proto import clgen_pb2\n",
     "from deeplearning.clgen.proto import model_pb2\n",
     "from deeplearning.clgen.proto import sampler_pb2\n",
-    "from experimental.deeplearning.polyglot import get_instances\n",
     "from lib.labm8 import bazelutil\n",
     "from lib.labm8 import pbutil\n",
-    "from lib.labm8 import viz\n",
-    "\n",
-    "FLAGS = flags.FLAGS(['argv[0]', '--logtostderr'])"
+    "from lib.labm8 import viz"
    ]
   },
   {
@@ -43,46 +40,63 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loaded 16 instances\n"
+      "Loaded 48 instances\n"
      ]
     }
    ],
    "source": [
-    "instances = get_instances.GetInstances()\n",
+    "instances_config = pathlib.Path('~/data/experimental/deeplearning/polyglot/instances.pbtxt').expanduser()\n",
+    "instances = [\n",
+    "    clgen.Instance(i) for i in\n",
+    "    pbutil.FromFile(instances_config, clgen_pb2.Instances()).instance\n",
+    "]\n",
     "print(\"Loaded {} instances\".format(len(instances)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[PosixPath('/mnt/cc/data/datasets/github/corpuses/java'),\n",
-       " PosixPath('/mnt/cc/data/datasets/github/corpuses/opencl')]"
+       "{PosixPath('/mnt/cc/data/datasets/github/corpuses/java'),\n",
+       " PosixPath('/mnt/cc/data/datasets/github/corpuses/opencl')}"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "def GetContentfileDirectories(instances: typing.List[clgen.Instance]) -> typing.List[pathlib.Path]:\n",
-    "    \"\"\"Return the lsit of contentfiles directories.\"\"\"\n",
-    "    contentfiles = [pathlib.Path(i.model.corpus.config.local_directory) for i in instances]\n",
-    "    return list(set(contentfiles))\n",
+    "    \"\"\"Return the list of contentfiles directories.\"\"\"\n",
+    "    preprocessed_dirs = {i.model.corpus.preprocessed.database_path.parent for i in instances}\n",
+    "    contentfiles = {(p / 'contentfiles').resolve() for p in preprocessed_dirs}\n",
+    "    return contentfiles\n",
     "\n",
     "GetContentfileDirectories(instances)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[PosixPath('/mnt/cc/data/datasets/github/repos_by_lang/java.db'),\n",
+       " PosixPath('/mnt/cc/data/datasets/github/repos_by_lang/opencl.db')]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def GetContentfileDatabase(local_directory: pathlib.Path) -> pathlib.Path:\n",
     "    path = pathlib.Path(f'/mnt/cc/data/datasets/github/repos_by_lang/{local_directory.stem}.db')\n",
@@ -91,22 +105,15 @@
     "    else:\n",
     "        raise FileNotFoundError(path)\n",
     "        \n",
-    "contentfiles_dbs = [GetContentfileDatabase(p) for p in GetContentfileDirectories(instances)]"
+    "contentfiles_dbs = [GetContentfileDatabase(p) for p in GetContentfileDirectories(instances)]\n",
+    "contentfiles_dbs"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loaded 6 output corpuses\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def GetOutputCorpus(instance: clgen.Instance) -> corpuses.Corpus:\n",
     "    with instance.Session():\n",
