--- a/experimental/deeplearning/fish/Eval.ipynb
+++ b/experimental/deeplearning/fish/Eval.ipynb
@@ -2,19 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/cec/phd/bazel-bin/experimental/deeplearning/fish/notebooks.runfiles/pypi__h5py_2_7_1/h5py/__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
-      "  from ._conv import register_converters as _register_converters\n",
-      "Using TensorFlow backend.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pathlib\n",
     "import pickle\n",
@@ -32,14 +22,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AssertionError",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-6-a870773d7423>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mmodel_path\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mexperiments_root\u001b[0m \u001b[0;34m/\u001b[0m \u001b[0;34m'compilable_balanced_clipped'\u001b[0m \u001b[0;34m/\u001b[0m \u001b[0;34m'model'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32massert\u001b[0m \u001b[0mdataset_root\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mis_dir\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0;32massert\u001b[0m \u001b[0mmodel_path\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mis_dir\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mAssertionError\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
-    "dataset_suffix = '_balanced_with_bf'\n",
-    "model_suffix = f'{dataset_suffix}_5000'\n",
-    "dataset_root = pathlib.Path(f'~/data/experimental/deeplearning/fish/assertion_dataset{dataset_suffix}').expanduser()\n",
-    "model_path = pathlib.Path(f'~/data/experimental/deeplearning/fish/assertion_model{model_suffix}').expanduser()\n",
+    "experiments_root = pathlib.Path('~/data/experimental/deeplearning/fish/').expanduser()\n",
+    "dataset_root = experiments_root / 'compilable_balanced_clipped' / 'dataset'\n",
+    "model_path = experiments_root / 'compilable_balanced_clipped' / 'model'\n",
     "assert dataset_root.is_dir()\n",
     "assert model_path.is_dir()"
    ]
@@ -75,7 +76,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "37 checkpoint files\n"
+      "0 checkpoint files\n"
      ]
     }
    ],
