No section number on acknowledgements.

--- a/docs/2018_07_issta/acks.tex
+++ b/docs/2018_07_issta/acks.tex
@@ -1,4 +1,4 @@
-\section{Acknowledgements}
+\section*{Acknowledgements}
 
 This work was supported by the UK EPSRC under grants EP/L01503X/1 (CDT in
 Pervasive Parallelism), and EP/P003915/1 (SUMMER).
