Fit authors onto one line in page headers.

--- a/docs/2018_07_issta/authors.tex
+++ b/docs/2018_07_issta/authors.tex
@@ -12,3 +12,5 @@
   \country{United Kingdom}
 }
 \email{alastair.murray@codeplay.com}
+
+\renewcommand{\shortauthors}{C.~Cummins, P.~Petoumenos, A.~Murray, H.~Leather}
