Update copyright bumpf.

--- a/docs/2018_07_issta/preamble.tex
+++ b/docs/2018_07_issta/preamble.tex
@@ -1,14 +1,16 @@
 \documentclass[sigconf,preprint]{acmart}
 
-% Copyright bumpf.
-\copyrightyear{2018}
-\acmYear{2018}
+%%% The following is specific to ISSTA'18 and the paper
+%%% 'Compiler Fuzzing through Deep Learning'
+%%% by Chris Cummins, Pavlos Petoumenos, Alastair Murray, and Hugh Leather.
+%%%
 \setcopyright{acmlicensed}
-\acmConference[ISSTA'18]{27th ACM SIGSOFT International Symposium  on  Software Testing and Analysis}{July 16--21, 2018}{Amsterdam, Netherlands}
-\acmBooktitle{ISSTA'18: International Symposium on Software Testing and Analysis, July 16--21, 2018, Amsterdam, Netherlands}
 \acmPrice{15.00}
 \acmDOI{10.1145/3213846.3213848}
+\acmYear{2018}
+\copyrightyear{2018}
 \acmISBN{978-1-4503-5699-2/18/07}
+\acmConference[ISSTA'18]{27th ACM SIGSOFT International Symposium  on  Software Testing and Analysis}{July 16--21, 2018}{Amsterdam, Netherlands}
 
 \begin{CCSXML}
 	<ccs2012>
