Squeeze to 10 pages.

--- a/docs/2018_07_issta/sec/deepsmith.tex
+++ b/docs/2018_07_issta/sec/deepsmith.tex
@@ -9,10 +9,11 @@ for differential testing.
 
 \begin{figure}
   \centering
-  \includegraphics[width=.75\columnwidth]{img/deepsmith} %
+  \includegraphics[width=.75\columnwidth]{img/deepsmith}
+  \vspace{-1em}
   \caption{%
     DeepSmith system overview.
-    \vspace{-1.1em}
+    \vspace{-1em}
   }%
   \label{fig:deeptune}
 \end{figure}
@@ -152,10 +153,11 @@ consisting of a few hundred lines of Python.
 \paragraph*{Test Harness Output Classes}
 \begin{figure}
   \centering %
-  \includegraphics[width=.7\columnwidth]{img/testprocess-long}%
+  \includegraphics[width=.7\columnwidth]{img/testprocess-long}
+  \vspace{-.5em}
   \caption{%
- 	  Test case execution, and possible results.%
-     \vspace{-1.1em}
+    Test case execution, and possible results.%
+    \vspace{-1.5em}
   }%
   \label{fig:test-process} %
 \end{figure}
