Re-jig the authors.

--- a/docs/2018_07_issta/authors.tex
+++ b/docs/2018_07_issta/authors.tex
@@ -1,16 +1,24 @@
-\author{Chris Cummins, \\Pavlos Petoumenos, Hugh Leather}
+\author{Chris Cummins}
+\author{Pavlos Petoumenos}
+\email{{c.cummins,ppetoume}@inf.ed.ac.uk}
 \affiliation{%
- 	\institution{University of Edinburgh}
- 	\country{United Kingdom}
+  \institution{University of Edinburgh}
+  \country{United Kingdom}
 }
-\email{{c.cummins, ppetoume, hleather}@inf.ed.ac.uk}
 
 \author{Alastair Murray}
+\email{alastair.murray@codeplay.com}
 \affiliation{%
   \institution{Codeplay Software}
   \city{Edinburgh}
   \country{United Kingdom}
 }
-\email{alastair.murray@codeplay.com}
+
+\author{Hugh Leather}
+\email{hleather@inf.ed.ac.uk}
+\affiliation{%
+  \institution{University of Edinburgh}
+  \country{United Kingdom}
+}
 
 \renewcommand{\shortauthors}{C.~Cummins, P.~Petoumenos, A.~Murray, H.~Leather}
