Captions above tables.

--- a/docs/2018_07_issta/sec/deepsmith.tex
+++ b/docs/2018_07_issta/sec/deepsmith.tex
@@ -110,15 +110,17 @@ for compiler testing.
 \subsection{Test Harness\label{sec:test-harness}}
 
 \begin{table*}[t!]
-	\footnotesize %
-	\centering %
-	\input{tab/platforms}
-	\caption{%
-		OpenCL systems and the number of bug reports submitted to date (22\% of which have been fixed, the remainder are pending). For each system, two testbeds are created, one with compiler optimizations, the other without.%
-		\vspace{-.5em}
-	}
-	\vspace{-1.8em}
-	\label{tab:platforms}
+  \footnotesize %
+  \centering %
+ 	\caption{%
+    OpenCL systems and the number of bug reports submitted to date (22\% of 
+    which have been fixed, the remainder are pending). For each system, two 
+    testbeds are created, one with compiler optimizations, the other without.%
+    \vspace{-.8em}
+  }
+  \input{tab/platforms}
+  \vspace{-.7em}
+  \label{tab:platforms}
 \end{table*}
 
 OpenCL is an embedded compute kernel language, requiring host code to compile,
