--- a/docs/2018_07_issta/sec/eval.tex
+++ b/docs/2018_07_issta/sec/eval.tex
@@ -94,18 +94,18 @@ approaches.
 The use of undeclared identifiers is a core error diagnostic which one would
 expect to be robust in a mature compiler. DeepSmith discovered cases in which
 the presence of undeclared identifiers causes the Testbeds $10\pm$ compiler to
-crash. For example, the undeclared identifier \texttt{c} in Figure~\ref{lst
-:oclgrind-uncorrected-typos} raises an assertion during semantic analysis of the
-AST when used as an array index.
+crash. For example, the undeclared identifier \texttt{c} in
+Figure~\ref{lst:oclgrind-uncorrected-typos} raises an assertion during semantic
+analysis of the AST when used as an array index.
 
-Type errors were an occasional cause of compile-time defect. Figure~\ref{lst
-:nvidia-recursion-segfault} induces a crash in NVIDIA compilers due to an
-implicit conversion between global to constant address qualifiers. Worse, we
-found that Testbeds $3\pm$ would loop indefinitely on some kernels containing
-implicit conversions from a pointer to an integer, as shown in Figure~\ref{lst
-:beignet-ptr-int-spin}. While spinning, the compiler would utilize 100\% of the
-CPU and consume an increasing amount of host memory until the entire system
-memory is depleted and the process crashes.
+Type errors were an occasional cause of compile-time defect.
+Figure~\ref{lst:nvidia-recursion-segfault} induces a crash in NVIDIA compilers
+due to an implicit conversion between global to constant address qualifiers.
+Worse, we found that Testbeds $3\pm$ would loop indefinitely on some kernels
+containing implicit conversions from a pointer to an integer, as shown in
+Figure~\ref{lst:beignet-ptr-int-spin}. While spinning, the compiler would
+utilize 100\% of the CPU and consume an increasing amount of host memory until
+the entire system memory is depleted and the process crashes.
 
 Occasionally, incorrect program semantics will remain undetected until late in
 the compilation process. Both Figures~\ref{lst:intel-gt2-double-assertion}
@@ -115,20 +115,21 @@ analysis, but trigger compiler assertions during code generation.
 An interesting yet unintended byproduct of having trained DeepSmith on thousands
 of real world examples is that the model learned to occasionally generate
 compiler-specific code, such as invoking compiler builtins. We found the quality
-of error handling on these builtins to vary wildly. For example, Figure~\ref{lst
-:almost-everything-crash} silently crashes 6 of the 10 compilers, which, to the
-best of our knowledge, makes DeepSmith the first random program generator to
-induce a defect through exploiting compiler-specific functionality.
+of error handling on these builtins to vary wildly. For example,
+Figure~\ref{lst:almost-everything-crash} silently crashes 6 of the 10 compilers,
+which, to the best of our knowledge, makes DeepSmith the first random program
+generator to induce a defect through exploiting compiler-specific functionality.
 
 \paragraph{Parser Failures}
 
 Parser development is a mature and well understood practice. We uncovered parser
-errors in several compilers. Each of the code samples in Figure~\ref{lst:parser-
-crashes} induce crash errors during parsing of compound statements in both
-Testbeds $5\pm$ and $7\pm$. For space, we have hand-reduced the listings to
-minimal code samples, which we have reported to Intel. Each reduction took
-around 6 edit-compile steps, taking less than 10 minutes. In total, we have
-generated 100 distinct programs which crash compilers during parsing.
+errors in several compilers. Each of the code samples in
+Figure~\ref{lst:parser-crashes} induce crash errors during parsing of compound
+statements in both Testbeds $5\pm$ and $7\pm$. For space, we have hand-reduced
+the listings to minimal code samples, which we have reported to Intel. Each
+reduction took around 6 edit-compile steps, taking less than 10 minutes. In
+total, we have generated 100 distinct programs which crash compilers during
+parsing.
 
 \begin{figure}
   \centering %
@@ -442,10 +443,10 @@ generated 33 programs with anomalous wrong-outputs. DeepSmith generated 30.
 
 The Clang front-end to LLVM supports OpenCL, and is commonly used in OpenCL
 drivers. This in turn causes Clang-related defects to potentially affect
-multiple compilers, for example the one in 
-Figure~\ref{lst:almost-everything-crash}. To evaluate the impact of Clang, we 
-used debug+assert builds of every LLVM release in the past 24 months and 
-processed 75,000 DeepSmith kernels through the Clang front-end (this includes 
+multiple compilers, for example the one in
+Figure~\ref{lst:almost-everything-crash}. To evaluate the impact of Clang, we
+used debug+assert builds of every LLVM release in the past 24 months and
+processed 75,000 DeepSmith kernels through the Clang front-end (this includes
 the lexer, parser, and type checker, but not code generation).
 
 Figure~\ref{fig:clangs} shows that the crash rate of the Clang front-end is, for
