Add ISAGT talk to CV.

--- a/docs/cv/sec/invited_talks.tex
+++ b/docs/cv/sec/invited_talks.tex
@@ -4,6 +4,16 @@
 
 
 \Description{%
+	% When.
+	\MarginText{2018}%
+	% Where.
+	\textbf{ISAGT}, Amsterdam, Netherlands. %
+	% What.
+	``Machine Learning for Compilers.'' %
+	\vspace{-.5em}%
+}
+
+\Description{%
   % When.
   \MarginText{2018}%
   % Where.
