Add slides for Codeplay talk.

--- a/docs/cv/sec/invited_talks.tex
+++ b/docs/cv/sec/invited_talks.tex
@@ -2,6 +2,15 @@
 
 \Title{Invited Talks}
 
+\Description{%
+  % When.
+  \MarginText{2018}%
+  % Where.
+  \textbf{Codeplay Software}, Edinburgh, UK. %
+  % What.
+  ``Compiler Fuzzing through Deep Learning.'' %
+  \vspace{-.5em}%
+}
 
 \Description{%
 	% When.
