--- a/docs/cv/sec/professional_experience.tex
+++ b/docs/cv/sec/professional_experience.tex
@@ -2,19 +2,18 @@
 
 \Title{Professional Experience}
 
-% Up and coming:
-%\Description{%
-%  % Date range.
-%  \MarginText{2018}%
-%  % Company.
-%  \textbf{DeepMind}, London, UK
-%  \newline%
-%  % Job title.
-%  Software Engineer Intern
-%  \vspace{.5em}\\ \noindent
-%  % Description.
-%  None.%
-%}
+\Description{%
+  % Date range.
+  \MarginText{2018\\*\textit{(current)}}%
+  % Company.
+  \textbf{DeepMind}, London, UK
+  \newline%
+  % Job title.
+  Software Engineer Intern
+  \vspace{.5em}\\ \noindent
+  % Description.
+  Investigating deep reinforcement learning for optimizing instruction fusion of TensorFlow XLA graphs. Black-box learning methods for TPU, GPU, and CPU performance.%
+}
 
 \Description{%
   % Date range.
@@ -26,7 +25,7 @@
   Software Engineer Intern
   \vspace{.5em}\\ \noindent
   % Description.
-  Created a representative benchmark of Google's Protocol Buffer usage. Working in the Google Wide Profiling team to synthesise benchmarks for Google compute. The project involved company-wide workload characterization through to datacentre-scale low level performance analysis of profiles and hardware counters.%
+  Created a representative benchmark of Google's Protocol Buffer usage. Working in the Google Wide Profiling team to synthesise benchmarks of Google compute. The project involved company-wide workload characterization through to datacentre-scale low level performance analysis of profiles and hardware counters.%
 }
 
 
@@ -40,7 +39,7 @@
   Software Engineer, Part Time
   \vspace{.5em}\\ \noindent
   % Description.
-  Developing OpenCL port of Tensorflow. Implemented GPU memory management for Eigen. Compile time scheduling and kernel fusion for expression trees on GPUs. Proposed and designed a Python interface for VisionCpp as lead developer. Extensive C++ meta-programming. Integrated compiler fuzzers into continuous testing tooling.%
+  Developing OpenCL port of Tensorflow. Implemented GPU memory management for Eigen. Compile time scheduling and kernel fusion for expression trees on GPUs. Proposed and designed a Python interface for VisionCpp as lead developer. Extensive C++ meta-programming. Integrated compiler fuzzing into continuous testing tooling.%
 }
 
 
@@ -57,32 +56,32 @@
   Patched \texttt{ioctl} subsystem in Linux kernel. Developed a novel SIMD register visualisation tool for Intel GPU assembly programming. Implemented GTK+ support for Wayland display server. Fixed memory and usability bugs in GNOME desktop applications. Developed particle effects engine for a 3D rendering program. Rapid prototyping of Android applications. Numerous contributions to open source projects.%
 }
 
+%\newpage
+%\Description{%
+%  % Date range.
+%  \MarginText{2010--2017}%
+%  % Company.
+%  \textbf{Freelance Web Developer}
+%	\newline
+%  % Description.
+%  Full-stack development for small businesses, including graphic design and branding. Clients included conferences, publishing houses, musicians, and a beauty parlour.%
+%  % Clients:
+%  %
+%  % CGO'18              http://cgo.org/cgo2018/
+%  % The Beauty Rooms    http://beautyroomsmatlock.com
+%  % Barthelemy Jusselme http://barthelemyjusselme.com
+%  % Myrmidon Books      http://myrmidonbooks.com
+%  % Border Scripts      http://borderscripts.com
+%  % Greystones Press    http://www.greystonespress.com
+%}
 
-\Description{%
-  % Date range.
-  \MarginText{2010--2017}%
-  % Company.
-  \textbf{Freelance Web Developer}
-	\newline
-  % Description.
-  Full-stack development for small businesses, including graphic design and branding. Clients included conferences, publishing houses, musicians, and a beauty parlour.%
-  % Clients:
-  %
-  % CGO'18              http://cgo.org/cgo2018/
-  % The Beauty Rooms    http://beautyroomsmatlock.com
-  % Barthelemy Jusselme http://barthelemyjusselme.com
-  % Myrmidon Books      http://myrmidonbooks.com
-  % Border Scripts      http://borderscripts.com
-  % Greystones Press    http://www.greystonespress.com
-}
 
-
-\Description{%
-  % Date range.
-  \MarginText{2008}%
-  % Company.
-  \textbf{Rolls Royce Holdings plc}, Derby, UK
-	\newline
-  % Description.
-  Work placement in the Design Methods \& Improvements team.%
-}
+%\Description{%
+%  % Date range.
+%  \MarginText{2008}%
+%  % Company.
+%  \textbf{Rolls Royce Holdings plc}, Derby, UK
+%	\newline
+%  % Description.
+%  Work placement in the Design Methods \& Improvements team.%
+%}
