--- a/experimental/compilers/random_opt/Eval.ipynb
+++ b/experimental/compilers/random_opt/Eval.ipynb
@@ -12,9 +12,9 @@
     "import seaborn as sns\n",
     "import numpy as np\n",
     "import pathlib\n",
-    "from lib.labm8 import viz\n",
-    "from lib.labm8 import bazelutil\n",
-    "from lib.labm8 import pbutil"
+    "from phd.lib.labm8 import viz\n",
+    "from phd.lib.labm8 import bazelutil\n",
+    "from phd.lib.labm8 import pbutil"
    ]
   },
   {
