Work in progress on OpenCL dataset.

--- a/datasets/opencl/datasets_opencl_thread_coarsening.ipynb
+++ b/datasets/opencl/datasets_opencl_thread_coarsening.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +164,7 @@
        "stencil                     __kernel void A(float a, float b, __global flo..."
       ]
      },
-     "execution_count": 27,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -177,7 +177,8 @@
     "}, axis='columns', inplace=True)\n",
     "src_df.set_index('program:opencl_kernel_name', inplace=True)\n",
     "src_df.sort_index(inplace=True)\n",
-    "src_df"
+    "src_df\n",
+    "# src_df.index.name"
    ]
   },
   {
