--- a/experimental/compilers/reachability/notebooks/experimental_compilers_reachability_notebook.ipynb
+++ b/experimental/compilers/reachability/notebooks/experimental_compilers_reachability_notebook.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Learning Reachability"
+    "# Learning from CFGs"
    ]
   },
   {
