--- a/docs/wip_graph/notebooks/02_learning_reachability.ipynb
+++ b/docs/wip_graph/notebooks/02_learning_reachability.ipynb
@@ -2097,7 +2097,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2105,7 +2105,8 @@
     "\n",
     "class ReachabilityModelEvaluator(object):\n",
     "    \n",
-    "    def __init__(self, specs: typing.List[TargetGraphSpec], predicted_reachabilities: typing.List[np.array],\n",
+    "    def __init__(self, specs: typing.List[TargetGraphSpec], \n",
+    "                 predicted_reachabilities: typing.List[np.array],\n",
     "                 data = None):\n",
     "        self._specs = specs\n",
     "        self._predicted_reachabilities = predicted_reachabilities\n",
@@ -2129,6 +2130,33 @@
     "        correct = np.mean(np.concatenate(cs, axis=0))\n",
     "        solved = np.mean(np.stack(ss))\n",
     "        return correct, solved\n",
+    "    \n",
+    "    @property\n",
+    "    def correct_incorrect_graph_evaluators(self):\n",
+    "        \"\"\"Return a pair of ReachabilityModelEvaluator instances, one filtered with\n",
+    "        only the correctly labeled graphs, the other with only the incorrectly \n",
+    "        labeled graphs.\"\"\"\n",
+    "        correct_specs, incorrect_specs = [], []\n",
+    "        correct_predictions, incorrect_predictions = [], []\n",
+    "        \n",
+    "        for spec, predicted in zip(self._specs, self._predicted_reachabilities):\n",
+    "            reachables = [spec.graph.IsReachable(spec.target_node_index, node_index) for node_index in spec.graph.node]\n",
+    "            if len(predicted) != len(reachables):\n",
+    "                raise ValueError\n",
+    "            if np.all([reachables == predicted]):\n",
+    "                correct_specs.append(spec)\n",
+    "                correct_predictions.append(predicted)\n",
+    "            else:\n",
+    "                incorrect_specs.append(spec)\n",
+    "                incorrect_predictions.append(predicted)\n",
+    "        \n",
+    "        correct = ReachabilityModelEvaluator(correct_specs, correct_predictions, data)\n",
+    "        incorrect = ReachabilityModelEvaluator(incorrect_specs, incorrect_predictions, data)\n",
+    "        return correct, incorrect\n",
+    "    \n",
+    "    @property\n",
+    "    def specs(self):\n",
+    "        return self._specs\n",
     "    \n",
     "    @property\n",
     "    def correct_nodes(self):\n",
@@ -3191,7 +3219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -3207,7 +3235,7 @@
        " 'correct_graphs': 0.9156187954996691}"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3216,8 +3244,67 @@
     "generator = SpecGenerator(ocl_dataset.cfgs_df['cfg:graph'].values)\n",
     "ocl_graphs = list(generator.Generate())\n",
     "\n",
-    "r = EvaluateGraphNet(ocl_graphs, name=\"OpenCL\")\n",
-    "r.ToDict()"
+    "ocl_r = EvaluateGraphNet(ocl_graphs, name=\"OpenCL\")\n",
+    "ocl_r.ToDict()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Evaluating errors.\n",
+    "ocl_correct_r, ocl_incorret_r = ocl_r.correct_incorrect_graph_evaluators\n",
+    "\n",
+    "print(f'{len(ocl_incorrect_r.specs)} of {len(ocl_r.specs)} graphs not solved')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "255 of 3022 graphs not solved\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Evaluating errors.\n",
+    "ocl_incorrect_specs = []\n",
+    "ocl_incorrect_predictions = []\n",
+    "\n",
+    "for spec, predicted in zip(ocl_r._specs, ocl_r._predicted_reachabilities):\n",
+    "    reachables = [spec.graph.IsReachable(spec.target_node_index, node_index) for node_index in spec.graph.node]\n",
+    "    if len(predicted) != len(reachables):\n",
+    "        raise ValueError\n",
+    "    if not np.all(reachables == predicted):\n",
+    "        ocl_incorrect_specs.append(spec)\n",
+    "        ocl_incorrect_predictions.append(predicted)\n",
+    "\n",
+    "print(f'{len(ocl_incorrect_specs)} of {len(ocl_r._specs)} graphs not solved')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "155.68627450980392\n"
+     ]
+    }
+   ],
+   "source": [
+    "num_nodes = np.array([s.graph.number_of_nodes() for s in ocl_incorrect_specs])\n",
+    "print(num_nodes.mean())\n"
    ]
   },
   {
@@ -3250,8 +3337,8 @@
     "    ocl_graphs,\n",
     "    [np.zeros(s.graph.number_of_nodes()) for s in ocl_graphs], {'rule': 'Never reachable'})\n",
     "\n",
-    "zero_r = max(ones_r, zeros_r, key=lambda r: r.correct_nodes)\n",
-    "zero_r.ToDict()"
+    "ocl_zero_r = max(ones_r, zeros_r, key=lambda r: r.correct_nodes)\n",
+    "ocl_zero_r.ToDict()"
    ]
   },
   {
@@ -3288,8 +3375,8 @@
     "generator = SpecGenerator(linux_dataset.cfgs_df['cfg:graph'].values)\n",
     "linux_graphs = list(generator.Generate(2000))\n",
     "\n",
-    "r = EvaluateGraphNet(linux_graphs, name=\"Linux\")\n",
-    "r.ToDict()"
+    "linux_r = EvaluateGraphNet(linux_graphs, name=\"Linux\")\n",
+    "linux_r.ToDict()"
    ]
   },
   {
@@ -3322,8 +3409,8 @@
     "    linux_graphs,\n",
     "    [np.zeros(s.graph.number_of_nodes()) for s in linux_graphs], {'rule': 'Never reachable'})\n",
     "\n",
-    "zero_r = max(ones_r, zeros_r, key=lambda r: r.correct_nodes)\n",
-    "zero_r.ToDict()"
+    "linux_zero_r = max(ones_r, zeros_r, key=lambda r: r.correct_nodes)\n",
+    "linux_zero_r.ToDict()"
    ]
   },
   {
